--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^12.5.0",
+    "axios": "^1.7.9",
     "echarts": "^5.6.0",
     "pinia": "^2.3.1",
     "vue": "^3.5.13",
