--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "echarts": "^5.6.0",
     "pinia": "^2.3.1",
     "vue": "^3.5.13",
+    "vue-datepicker-next": "^1.0.3",
     "vue-echarts": "^7.0.3",
     "vue-router": "^4.5.0",
+    "vue3-datepicker": "^0.4.0",
     "vuetify": "^3.7.11"
   },
   "devDependencies": {
