--- a/package.json
+++ b/package.json
@@ -13,13 +13,20 @@
     "format": "prettier . --write"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.12.6",
+    "@grpc/proto-loader": "^0.7.13",
+    "@protobuf-ts/grpc-transport": "^2.9.4",
     "@protobuf-ts/grpcweb-transport": "^2.9.4",
+    "@protobuf-ts/plugin": "^2.9.4",
     "@protobuf-ts/protoc": "^2.9.4",
+    "@protobuf-ts/runtime": "^2.9.4",
     "@vueuse/core": "^12.5.0",
     "axios": "^1.7.9",
     "echarts": "^5.6.0",
     "google-protobuf": "^3.21.4",
     "pinia": "^2.3.1",
+    "protobufjs": "^7.4.0",
+    "ts-proto": "^2.6.1",
     "vue": "^3.5.13",
     "vue-datepicker-next": "^1.0.3",
     "vue-echarts": "^7.0.3",
