--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@protobuf-ts/plugin": "^2.9.4",
     "@protobuf-ts/protoc": "^2.9.4",
     "@protobuf-ts/runtime": "^2.9.4",
+    "@protobuf-ts/runtime-rpc": "^2.9.6",
     "@vueuse/core": "^12.5.0",
     "axios": "^1.7.9",
     "echarts": "^5.6.0",
